# Coral

./: CMakeLists.txt  README.md  premake5.lua
.github/workflows/: cmake-multi-platform.yml
Coral.Managed/: premake5.lua
Coral.Native/: premake5.lua
Coral.Native/Include/Coral/: Attribute.hpp  ManagedObject.hpp
